log
Thu 16 May 2024 03:08:47 PM UTC: 
 tests:  0|5
total_score: 0/70
ce1ba97
Thu 16 May 2024 03:10:35 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:21: error: implicit declaration of function ‘appendList’ [-Werror=implicit-function-declaration]
   62 |                     appendList(list, adj_node);
      |                     ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9c80b4f
Thu 16 May 2024 03:13:15 PM UTC: 
 sudoku.c | 16 ----------------
 1 file changed, 16 deletions(-)
 tests:  0|5
total_score: 0/70
c801c07
Thu 16 May 2024 03:15:06 PM UTC: 
 sudoku.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
 tests:  0|5
total_score: 0/70
b601b09
Thu 16 May 2024 03:24:52 PM UTC: 
 sudoku.c | 63 +++++++++++++++++++++++++++++++++++----------------------------
 1 file changed, 35 insertions(+), 28 deletions(-)
 tests:  3|4
total_score: 20/70
63d5812
Thu 16 May 2024 03:30:39 PM UTC: 
 sudoku.c | 51 +++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 41 insertions(+), 10 deletions(-)
 tests:  0|5
total_score: 0/70
824f8d3
Thu 16 May 2024 03:31:52 PM UTC: 
 sudoku.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
de75323
Thu 16 May 2024 03:32:15 PM UTC: 
 sudoku.c | 41 -----------------------------------------
 1 file changed, 41 deletions(-)
 tests:  3|4
total_score: 20/70
141c47f
